# hs-adbwrapper

./: README.md  adbwrapper.cabal
Android/: AdbWrapper.hs
Android/AdbWrapper/: Lowlevel.hs  Types.hs  Utils.hs
